Include range, form, slide, images.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
 
+    <!-- Bootstrap CDN -->
+    <!-- <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    /> -->
+
     <!-- Additional CSS must be placed after Bootstrap CSS -->
     <link
       rel="stylesheet"
@@ -29,43 +37,107 @@
   <body>
     <header>
       <div class="container">
-        <!-- Navbar -->
-        <ul class="nav mt-4">
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Active</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a
-              class="nav-link disabled"
-              href="#"
-              tabindex="-1"
-              aria-disabled="true"
-              >Disabled</a
+        <!-- Nav code start -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">Khara Commercial Real Estate</a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
             >
-          </li>
-        </ul>
-        <!-- Jumbotron -->
-        <div class="jumbotron mt-4">
-          <h1 class="display-4">Are you looking for your next office?</h1>
-          <p class="lead">
-            At Khara Commercial Real Estate we have a wide array of commercial
-            office space to suit your needs...
-          </p>
-          <hr class="my-4" />
-          <p>
-            It uses utility classes for typography and spacing to space content
-            out within the larger container.
-          </p>
-          <a class="btn btn-primary btn-lg" href="#" role="button"
-            >Learn more</a
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#"
+                    >Home</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="navbarDropdown"
+                    role="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    Dropdown
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li>
+                      <a class="dropdown-item" href="#">Another action</a>
+                    </li>
+                    <li><hr class="dropdown-divider" /></li>
+                    <li>
+                      <a class="dropdown-item" href="#">Something else here</a>
+                    </li>
+                  </ul>
+                </li>
+              </ul>
+              <form class="d-flex">
+                <input
+                  class="form-control me-2"
+                  type="search"
+                  placeholder="Search"
+                  aria-label="Search"
+                />
+                <button class="btn btn-outline-success" type="submit">
+                  Search
+                </button>
+              </form>
+            </div>
+          </div>
+        </nav>
+        <!-- Nav code end -->
+
+        <!-- Slider code start -->
+        <div
+          id="carouselExampleControls"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="img/slider_1.png" class="d-block w-100" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="img/slider_2.png" class="d-block w-100" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="img/slider_3.png" class="d-block w-100" alt="..." />
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleControls"
+            data-bs-slide="prev"
           >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleControls"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
+        <!-- Slider code end -->
       </div>
     </header>
 
@@ -81,6 +153,47 @@
               reprehenderit sunt minus.
             </p>
             <a href="#" class="btn btn-outline-secondary">Find Out More</a>
+          </div>
+        </div>
+        <!-- Custom range -->
+        <div class="container my-5">
+          <div class="row">
+            <!-- col start -->
+            <div class="col-sm-6">
+              <label for="sqft_range" class="form-label"
+                >Please select your desired sq footage</label
+              >
+              <input
+                id="sqft_range"
+                type="range"
+                name="rangeInput"
+                min="300"
+                max="3000"
+                step="300"
+                class="form-range"
+                onchange="updateTextInput(this.value);"
+              />
+              <p id="sqft_value_display"></p>
+            </div>
+            <!-- col end -->
+            <!-- col start -->
+            <div class="col-sm-6">
+              <label for="exampleDataList" class="form-label"
+                >Pick your city</label
+              >
+              <input
+                class="form-control"
+                list="datalistOptions"
+                id="exampleDataList"
+                placeholder="Type to search..."
+              />
+              <datalist id="datalistOptions">
+                <option value="Chandigarh"></option>
+                <option value="Gurgaon"></option>
+                <option value="Bangalore"></option>
+              </datalist>
+            </div>
+            <!-- col end -->
           </div>
         </div>
       </div>
@@ -176,9 +289,38 @@
       </div>
     </section>
 
+    <!-- Schedule a visit form -->
+    <div class="container visit-form">
+      <section id="visit" class="text-white py-5 mt-5 px-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <input
+                type="text"
+                class="form-control form-control-lg mb-resp"
+                placeholder="Enter Name"
+              />
+            </div>
+            <div class="col-md-4">
+              <input
+                type="tel"
+                class="form-control form-control-lg mb-resp"
+                placeholder="Enter Phone Number"
+              />
+            </div>
+            <div class="col-md-4">
+              <button class="btn btn-primary btn-lg btn-block">
+                <i class="fas fa-envelope-open-o"></i> Schedule a Visit
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
     <!-- FOOTER -->
-    <footer id="main-footer" class="bg-light mt-4">
-      <div class="container">
+    <div class="container">
+      <footer id="main-footer" class="bg-light mt-5">
         <div class="row">
           <div class="col text-center py-4">
             <h3>Khara Commercial Real Estate</h3>
@@ -186,10 +328,22 @@
               Copyright &copy; 2021
               <span id="year"></span>
             </p>
-            <button class="btn btn-primary">Contact Us</button>
           </div>
         </div>
-      </div>
-    </footer>
+      </footer>
+    </div>
+
+    <script>
+      function updateTextInput(val) {
+        document.getElementById("sqft_value_display").innerHTML =
+          "Value selected: " + val;
+      }
+    </script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
